--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Most powerful and futuristic tech innovation",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app.js"
   },
   "author": "Aritra Bhaduri",
   "license": "ISC",
